# Fincat

./: .gitignore  Justfile  README.md  pyproject.toml
backend/: __init__.py
data/: symbols.json
frontend/: Justfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
scripts/: earnings_data.py
